2025年07月31日的提交。

--- a/md/买的卡祖笛到货了.md
+++ b/md/买的卡祖笛到货了.md
@@ -3,7 +3,7 @@ title: 买的卡祖笛到货了
 ---
 
 是想搞个乐器玩一下。因为我爱听万青，以前听说过卡祖笛，前几天上网上搜了一下，说他可以模仿出萨克斯或小号的音色，而且上手简单，只需要含在嘴里哼唱即可。于是我用打工挣的零花钱买了一个。
-关于价格我是参考的这个文章:[](https://zhuanlan.zhihu.com/p/425093023)，自己想玩玩于是买了一个11元的。
+关于价格我是参考的这个文章:[知乎专栏](https://zhuanlan.zhihu.com/p/425093023)，自己想玩玩于是买了一个11元的。
 确实，拿到之后上手非常简单。
-可以去看我b站的视频【卡祖笛到了。试奏一曲。吹的不好请见谅😂-哔哩哔哩】[](https://b23.tv/hjJP7c1)
+可以去看我b站的视频[【卡祖笛到了。试奏一曲。吹的不好请见谅😂-哔哩哔哩】](https://b23.tv/hjJP7c1)
 好的，先水到这了。
