2026年02月17日的提交。

--- a/md/2026新年快乐！.md
+++ b/md/2026新年快乐！.md
@@ -8,7 +8,7 @@ title: 2026新年快乐！
 ```
 Subject: Question from a young free software enthusiast in China
 From: chenwumm@qq.com
-To: rms@gun.org
+To: rms@gnu.org
 
 Hello Mr. Stallman,
  
